--- a/views/administracion/unosolo/verUnTipoUnidad.jade
+++ b/views/administracion/unosolo/verUnTipoUnidad.jade
@@ -84,17 +84,17 @@ html(lang='es')
           select(name="status")
             if tipoUnidad.status == true
               option(class="opt" value = '1') Activo
-              if usuario.esAdministrador == true
+              if usuario.tipoUsuario == 1
                 option(class="opt" value ='0') Inactivo
             else 
               option(class="opt" value = '0') Inactivo 
-              if usuario.esAdministrador == true
+              if usuario.tipoUsuario == 1
                 option(class="opt" value = '1') Activo
 
       .col-half
         h4 Orden
           .input-group.input-group-icon
-            input(type="text", name="orden",readonly='readonly', value = tipoUnidad.orden  , placeholder="Orden")
+            input(type="text", name="orden", value = tipoUnidad.orden  , placeholder="Orden")
             .input-icon
               i.fa.fa-envelope
                         
