--- a/views/administracion/unosolo/verUnUsuario.jade
+++ b/views/administracion/unosolo/verUnUsuario.jade
@@ -67,7 +67,7 @@ html(lang='es')
     input(type='hidden' value= usuarioVer.IdUsuario   name="IdUsuarioVer")     
 
     if tipoMensaje == 1 
-      label(class="ok") Datos guardados correctamento
+      label(class="ok") Datos guardados correctamente
     else  
       if tipoMensaje == 2
         label(class="lblError") Algo salio mal, los datos no se guardaron
