--- a/views/administracion/unosolo/verUnaFranquicia.jade
+++ b/views/administracion/unosolo/verUnaFranquicia.jade
@@ -82,11 +82,11 @@ html(lang='es')
             select(name = "status")
               if franquicia.status == true
                 option(class="opt" value = '1') Activo
-                if usuario.esAdministrador == true
+                if usuario.tipoUsuario == 1
                   option(class="opt" value ='0') Inactivo
               else 
                 option(class="opt" value = '0') Inactivo 
-                if usuario.esAdministrador == true
+                if usuario.tipoUsuario == 1
                   option(class="opt" value = '1') Activo
               
                     
