--- a/views/administracion/unosolo/verUnTipoUnidad.jade
+++ b/views/administracion/unosolo/verUnTipoUnidad.jade
@@ -70,6 +70,7 @@ html(lang='es')
         label(class="lblError") Algo salio mal, los datos no se guardaron
     input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
     input(type='hidden' value= tipoUnidad.IdTipoUnidad   name="IdTipoUnidad") 
+
     h3 Informacion del Tipo de Unidad
     .row
       .col-half
@@ -101,7 +102,7 @@ html(lang='es')
     .row
         
         .input-group
-          if usuario.tipoUsuario == 1
+          if usuario.tipoUsuario == 1 || agregar
             input(type="submit", value="Guardar" class="brnGuardar")
 
 .container3
@@ -109,7 +110,8 @@ html(lang='es')
     .input-group
       if usuario.tipoUsuario == 1 || usuario.tipoUsuario == 2
         form(action="nuevoTipoUnidad" method='POST')    
-          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")        
+          input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")  
+          input(type='hidden' value= 1   name="agregar")      
           input(type="submit", value="Nuevo" class ="brnNuevo")
  
 .container3
