--- a/views/administracion/listas/listaCentroCostos.jade
+++ b/views/administracion/listas/listaCentroCostos.jade
@@ -50,6 +50,10 @@ html(lang='es')
             form(action="verListaCentrosCosto"  method='POST')
               input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
               button(type="submit" class="btnMenu") Centros de Costo
+          a 
+              form(action="verListaContacto"  method='POST')
+                input(type='hidden' value= usuario.IdUsuario   name="IdUsuario") 
+                button(type="submit" class="btnMenu") Contactos
           if usuario.tipoUsuario == 1          
             a 
               form(action="verListaUsuarios"  method='POST')
